--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
