--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "axios": "^0.23.0",
     "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
